# discount-models

./: .pylintrc  README.md  pyproject.toml
analysis/: .gitignore  README.md  pyproject.toml  table.tex
analysis/scripts/: analysis.sh
analysis/src/analysis/: figures.py  plot_metrics.py  supplemental.py
analysis/src/mpl_styles/: archive_visualization.mplstyle  discount_viz.mplstyle  simple.mplstyle
config/: config.yaml
config/algo/: cma_mae.yaml  dds.yaml  dms.yaml  e1_num.yaml  map_elites.yaml  map_elites_line.yaml
config/algo/archive/: cvt_lhq_10k.yaml  cvt_lhq_10k_mae.yaml  cvt_mnist.yaml  cvt_mnist_mae.yaml  cvt_multi_100d.yaml  cvt_multi_100d_mae.yaml  density.yaml  discount.yaml  extra_fields.yaml  grid_100.yaml  grid_100_mae.yaml
config/algo/discount_model/: mlp.yaml
config/algo/emitters/: es_density.yaml  es_imp.yaml  gaussian.yaml  isoline.yaml  sigma0.yaml
config/algo/scheduler/: scheduler.yaml
config/domain/: arm_100d.yaml  flat_100d.yaml  flat_multi_100d.yaml  lsi_face.yaml  rastrigin_100d.yaml  rastrigin_multi_100d.yaml  sphere_100d.yaml  sphere_20_100d.yaml  sphere_50_100d.yaml  sphere_multi_100d.yaml  triangles_fashion_mnist.yaml  triangles_mnist.yaml
scripts/: seeds.py
scripts/paper/: cma_mae_100d.sh  cma_mae_20_100d.sh  cma_mae_50_100d.sh  cma_mae_lsi_face.sh  cma_mae_multi_100d.sh  cma_mae_triangles_mnist.sh  dds_100d.sh  dds_20_100d.sh  dds_50_100d.sh  dds_multi_100d.sh  dms_100d.sh  dms_20_100d.sh  dms_50_100d.sh  dms_lsi_face.sh  dms_multi_100d.sh  dms_triangles_mnist.sh  map_elites_100d.sh  map_elites_20_100d.sh  map_elites_50_100d.sh  map_elites_line_100d.sh  map_elites_line_20_100d.sh  map_elites_line_50_100d.sh  map_elites_line_lsi_face.sh  map_elites_line_multi_100d.sh  map_elites_line_triangles_mnist.sh  map_elites_lsi_face.sh  map_elites_multi_100d.sh  map_elites_triangles_mnist.sh
src/: discount_archive.py  evaluation.py  mpl_styles  qd.py  visualize.py
src/cvt/: fashion_mnist_centroids.py  lhq_centroids.py  make_centroids.py  mnist_centroids.py
src/cvt/centroids/: fashion_1000_centroids.npy  fashion_1000_labels.npy  flat_multi_100d.npy  lhq_clip_paths_10k.txt  mnist_1000_centroids.npy  sphere_20_100d.npy  sphere_50_100d.npy
src/domains/: __init__.py  arm.py  domain_base.py  domains_test.py  lin_proj.py  lsi_clip.py  lsi_face.py  triangles.py
src/domains/mnist/: __init__.py  autoencoder.py  dcgan.py  lenet5.py  mlpgan.py  sample_imgs.py  visualize.py
src/domains/mnist/mnist_weights/: README.md  ae_decoder.pth  ae_encoder.pth  mnist_classifier.pth  vae_decoder.pth  vae_encoder.pth
src/models/: discount_model_base.py  mlp.py
src/utils/: code_timer.py  hydra_utils.py  logging.py  metric_logger.py  warn_traceback.py
